--- a/HW-4/index.html
+++ b/HW-4/index.html
@@ -32,19 +32,16 @@
         </div> <div id="rider-selection">
             <p>Hi! What's your name?</p>
             <input type="text" id="rider-name" placeholder="Enter name here...">
-            <button id="submit-name">Ready to Ride</button>
+            <button id="submit-name" onclick="greetRider()">Ready to Ride</button>
         </div> 
       <div id="horse-stories" class="hidden">
     <h3>The Ranch Lineup</h3>
+    <p>Welcome to the ranch. I'm glad you are here today. We are going to have fun! The next thing we have to do is let you pick a horse and then saddle them up. Let me tell you about our horses!</p>
     <p><strong>Grandpa:</strong> The wisest soul on the ranch. He's patient and kind. I started riding with him when I was just a kid.</p>
     <p><strong>Dad:</strong> Strong and reliable. He's got a big engine and can work all day without breaking a sweat but he can be a kid at times too!</p>
     <p><strong>Snort:</strong> She's a firecracker! She's fast and can jump at her shadow at times. If you aren't a regular rider, you may want to let someone else saddle her up.</p>
-</div>  
-    </div> 
 
- <div id="horse-stories" class="hidden">
-    <p>Just click a button and we will help you saddle up:</p>
-    
+    <p>Just click a button and we will help you saddle up:</p> 
     <div class="selection-buttons">
         <button onclick="pickHorse('Grandpa')">Grandpa</button>
         <button onclick="pickHorse('Dad')">Dad</button>
