oh boy crossing my fingers

--- a/HW-5/index.html
+++ b/HW-5/index.html
@@ -12,12 +12,10 @@
     <h1 id="title">EVERYBODY WANTS TO BE A COWBOY</h1>
     <h2 id="subtitle">Until you have to do cowboy stuff.</h2>
 
-    <p id="story-text">Time to ride.</p>
+    <div id="top-message">Time to ride!</div>
         <div id="bottom-frame"></div>
 
-    <div id="story-container">
-        
-
+         
         <div class="horse-corral"> 
             <figure> 
                 <img src="grandpa.jpg" alt="Grandpa" class="horse-pic">
@@ -36,6 +34,7 @@
             <input type="text" id="rider-name" placeholder="Enter name here...">
             <button id="submit-name" onclick="greetRider()">Ready to Ride</button>
         </div> 
+ <div id="story-container"> 
       <div id="horse-stories" class="hidden">
     <h3>The Ranch Lineup</h3>
     <p>Welcome to the ranch. I'm glad you are here today. We are going to have fun! The next thing we have to do is let you pick a horse and then saddle them up. Let me tell you about our horses!</p>
